src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@import "../variables.less";
@import "../mixins.less";

html,
body {
  height: 100%;
}

.open {
  > .site-menu {
    width: @site-menu-width;
  }

  > .site-content {
    margin-left: @site-menu-width;
  }
}

.focus {
  #search-form {
    display: block;
  }

  .navbar-right {
    display: none;
  }
}

.site-menu {
  @height: "calc(100% - @{navbar-height})";
  position: fixed;
  width: 0;
  height: ~"@{height}";
  border-top: 3px solid @brand-primary;
  .box-shadow(~"0 1px 0 1px @{border-color}, 0 1px 5px #ddd");
  // margin-top: -2px;
  overflow: hidden;
  z-index: @zindex-navbar-fixed;
  .transition(width ease .5s);
  background-color: #fff;
}

.site-menu-inner {
  position: relative;
  ul {
    margin: 0;
    padding: 0;
    list-style: none;

    h3 {
      font-size: 11px;
      color: #bbb;
      margin-bottom: 5px;
      font-weight: bold;
      padding: 5px 20px;
      white-space: nowrap;
    }

    a {
      font-size: 12px;
      color: #666;
      display: block;
      text-decoration: none;
      padding: 3px 20px;
      white-space: nowrap;

      &:hover {
        background-color: @gray-lighter;
      }

      .icon {
        margin-right: 5px;
      }
    }

    &:last-child {
      margin-bottom: 20px;
    }
  }
  .current {
    a {
      background: @brand-primary;
      color: #fff;

      &:hover {
        background: @brand-primary;
        color: #fff;
      }
    }
  }
}

.site-user-menu {
  padding: 20px;
  padding-bottom: 0;
  white-space: nowrap;
  line-height: 1;

  .media-object {
    width: 32px;
    height: 32px;
  }

  a {
    font-size: 12px;
  }

  .username {
    color: #666;
    font-size: 13px;
    font-weight: bold;
    display: block;
  }
  .username:hover {
    color: #333;
  }
}

.site-content {
  position: relative;
  margin: 15px 0 30px 0;
  width: 100%;
  min-width: 320px;
  .transition(margin-left ease .5s);
}

.site-container {
  padding-top: @navbar-height;
  overflow: hidden;
}

.site-wrapper {
  min-width: 320px;
  max-width: 1024px;
  margin: 0 auto;
}

.site-sidebar {
  display: none;
  float: left;
}

.navbar-toggle {
  float: left;
  display: inline;
  position: relative;
  top: 2px;
  margin-top: -2px;
  border-bottom: 2px solid transparent;
  padding: 12px 15px;

  .icon-bar {
    display: block;
    width: 20px;
    height: 2px;
    border-radius: 1px;
  }
  .icon-bar + .icon-bar {
    margin-top: 5px;
  }

  &:hover {
    background-color: transparent;
    border-color: @brand-primary;
  }
}

#site-header {
  border: 0;
  border-bottom: 1px solid @border-color;
  .box-shadow(0 1px 1px #ddd);
  .navbar-left,
  .navbar-right {
    .icon {
      font-size: 16px;
      padding: 0 2px;
    }
  }
  a span {
    display: none;
  }
  .nav > li {
    position: relative;
    float: left;
  }

  .navbar-brand {
    width: @site-menu-width;
    text-indent: -9999px;
    background: url("../img/logo.png") center no-repeat;
  }
}

#m-btn-search {
  display: block;
  border-bottom: 2px solid transparent;

  &:hover {
    border-color: @blue-accent;
  }
}

#search-form {
  display: none;
  margin-top: 6px;
  margin: 6px 0;
  position: relative;
  top: 0;
  width: 320px;

  .twitter-typeahead {
    width: 100%;
  }

  .typeahead,
  .tt-query,
  .tt-hint {
    background-color: transparent;
    border: 1px solid #ccc;
    border-radius: 15px;
    font-size: 13px;
    width: 100%;
    padding: 4px 14px;
    // border: solid transparent;
    outline: none;
  }
  .tt-dropdown-menu {
    border-top: 1px solid rgba(0,0,0,0.15);
    padding: 6px 0;
  }
  .tt-dropdown-header {
    border: 0;
    color: #bbb;
    font-size: 11px;
    font-weight: bold;
    padding: 6px 12px;
    text-align: left;
  }
  .tt-suggestion a {
    color: #333;
    display: block;
    font-size: 14px;
    padding: 0 0 0 12px;
  }
  .avatar {
    margin-right: 10px;
  }
}

#btn-search {
  background: transparent;
  border: 0;
  color: #777;
  cursor: pointer;
  padding: 0;
  position: absolute;
  right: 12px;
  top: 5px;
  width: 20px;
  -webkit-appearance: none;

  .icon-search:before {
    margin: 0;
  }
}

/** Hide header mobile components **/
#mobile-login-link {
  display: none;
}

#create-advert-btn {
  &:hover {
    color: #fff;
    background: @brand-primary;
  }
}

#notif-btn {
  &:hover {
    background-color: #777;
    color: #fff;
  }
}

#login-express {
  width: 255px;

  .form-group {
    margin-bottom: 10px;
  }

  .checkbox {
    margin-top: 6px;
    margin-bottom: 6px;
  }
}

.site-body {
  margin: 0 30px;
}
.site-body-bg {
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 0 1px #ccc;
  border: 1px solid #ccc;
}

@media (max-width: 599px) {
  .search-container {
    margin-left: 50px;
    padding-right: 10px;
  }

  #search-form {
    width: 100%;
  }

  #login-express-dropdown {
    display: none;
  }

  #mobile-login-link {
    display: block;
  }

  #search-box {
    width: 100% !important;
  }
}

@media (min-width: 481px) {
}

@media (min-width: 600px) {
  .navbar-toggle {
    display: none;
  }

  .navbar-brand {
    display: block;
  }

  .site-header a span {
    display: inline;
  }

  .site-content {
    margin-left: @site-menu-width;
    width: auto;
  }

  .site-menu {
    width: @site-menu-width;
  }
}

@media (min-width: 720px) {
  #m-btn-search {
    display: none;
  }

  #search-form {
    display: block;
  }
}

@media (min-width: 960px) {
  .site-body {
    float: left;
    min-width: 500px;

    .panel {
      margin: 0;
      border: 0;
    }
  }
  .site-body-full {
    width: 100%;
  }

  .site-sidebar {
    display: block;
    width: 260px;
  }
  .site-aside {
    margin-bottom: 15px;
  }
}

